--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,7 @@
             "MyPHPInfo\\": "src/"
         }
     },
-    "require": {}
+    "require": {
+        "guzzlehttp/guzzle": "7.1.1"
+    }
 }
